services/node-app/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: node-app
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-app
          image: "gcr.io/imposing-pager-229110/node-app:1"
