services/node-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: node-app
spec:
  selector:
    app: node-app
  ports:
    - name: http
      targetPort: 3000
      port: 3000
