services/node-app/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: node-app-ingress
  annotations:
          #kubernetes.io/ingress.class: public
    traefik.frontend.passHostHeader: "false"
    traefik.frontend.priority: "1"
    kubernetes.io/ingress.allow-http: "true"
    # kubernetes.io/ingress.global-static-ip-name: nginx-app-ingress
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    certmanager.k8s.io/acme-http01-edit-in-place: "true"
spec:
  rules:
  - host: cust4.ipradr.com
    http:
      paths:
      - path: /
        backend:
          serviceName: node-app
          servicePort: 3000
  tls:
    - hosts:
        - cust4.ipradr.com
      secretName: nginx-tls-cert-prod
